tests/rosetta/transpiler/Java/almkvist-giullera-formula-for-pi.error
compile: exit status 1
/tmp/TestJavaTranspiler_Rosetta_Goldenalmkvist-giullera-formula-for-pi3594009400/001/Main.java:156: error: method concat in interface Stream<T#2> cannot be applied to given types;
            res = java.util.stream.Stream.concat(java.util.Arrays.stream(new int[]{q}), java.util.Arrays.stream(res)).toArray(Object[]::new);
                                         ^
  required: Stream<? extends T#1>,Stream<? extends T#1>
  found:    IntStream,IntStream
  reason: cannot infer type-variable(s) T#1
    (argument mismatch; IntStream cannot be converted to Stream<? extends T#1>)
  where T#1,T#2 are type-variables:
    T#1 extends Object declared in method <T#1>concat(Stream<? extends T#1>,Stream<? extends T#1>)
    T#2 extends Object declared in interface Stream
/tmp/TestJavaTranspiler_Rosetta_Goldenalmkvist-giullera-formula-for-pi3594009400/001/Main.java:196: error: method concat in interface Stream<T#2> cannot be applied to given types;
            res = java.util.stream.Stream.concat(java.util.Arrays.stream(res), java.util.Arrays.stream(new int[]{min})).toArray(Object[]::new);
                                         ^
  required: Stream<? extends T#1>,Stream<? extends T#1>
  found:    IntStream,IntStream
  reason: cannot infer type-variable(s) T#1
    (argument mismatch; IntStream cannot be converted to Stream<? extends T#1>)
  where T#1,T#2 are type-variables:
    T#1 extends Object declared in method <T#1>concat(Stream<? extends T#1>,Stream<? extends T#1>)
    T#2 extends Object declared in interface Stream
/tmp/TestJavaTranspiler_Rosetta_Goldenalmkvist-giullera-formula-for-pi3594009400/001/Main.java:201: error: method concat in interface Stream<T#2> cannot be applied to given types;
                    out = java.util.stream.Stream.concat(java.util.Arrays.stream(out), java.util.Arrays.stream(new int[]{tmp[j]})).toArray(Object[]::new);
                                                 ^
  required: Stream<? extends T#1>,Stream<? extends T#1>
  found:    IntStream,IntStream
  reason: cannot infer type-variable(s) T#1
    (argument mismatch; IntStream cannot be converted to Stream<? extends T#1>)
  where T#1,T#2 are type-variables:
    T#1 extends Object declared in method <T#1>concat(Stream<? extends T#1>,Stream<? extends T#1>)
    T#2 extends Object declared in interface Stream
/tmp/TestJavaTranspiler_Rosetta_Goldenalmkvist-giullera-formula-for-pi3594009400/001/Main.java:240: error: incompatible types: LinkedHashMap<String,Object> cannot be converted to Map<String,Integer>
        java.util.Map<String,Integer> m = new java.util.LinkedHashMap<String, Object>();
                                          ^
/tmp/TestJavaTranspiler_Rosetta_Goldenalmkvist-giullera-formula-for-pi3594009400/001/Main.java:257: error: incompatible types: LinkedHashMap<String,Object> cannot be converted to Map<String,Integer>
        java.util.Map<String,Integer> f = new java.util.LinkedHashMap<String, Object>();
                                          ^
/tmp/TestJavaTranspiler_Rosetta_Goldenalmkvist-giullera-formula-for-pi3594009400/001/Main.java:273: error: method get in interface Map<K,V> cannot be applied to given types;
f.put(String.valueOf(n), f.get(String.valueOf(n), 0) + 1);
                          ^
  required: Object
  found:    String,int
  reason: actual and formal argument lists differ in length
  where K,V are type-variables:
    K extends Object declared in interface Map
    V extends Object declared in interface Map
/tmp/TestJavaTranspiler_Rosetta_Goldenalmkvist-giullera-formula-for-pi3594009400/001/Main.java:281: error: for-each not applicable to expression type
        for (var k : fn) {
                     ^
  required: array or java.lang.Iterable
  found:    Map<String,Integer>
/tmp/TestJavaTranspiler_Rosetta_Goldenalmkvist-giullera-formula-for-pi3594009400/001/Main.java:284: error: method get in interface Map<K,V> cannot be applied to given types;
exps.put("2", exps.get("2", 0) + 5);
                  ^
  required: Object
  found:    String,int
  reason: actual and formal argument lists differ in length
  where K,V are type-variables:
    K extends Object declared in interface Map
    V extends Object declared in interface Map
/tmp/TestJavaTranspiler_Rosetta_Goldenalmkvist-giullera-formula-for-pi3594009400/001/Main.java:287: error: for-each not applicable to expression type
        for (var k : ft2) {
                     ^
  required: array or java.lang.Iterable
  found:    Map<String,Integer>
/tmp/TestJavaTranspiler_Rosetta_Goldenalmkvist-giullera-formula-for-pi3594009400/001/Main.java:290: error: method get in interface Map<K,V> cannot be applied to given types;
exps.put("3", exps.get("3", 0) - 1);
                  ^
  required: Object
  found:    String,int
  reason: actual and formal argument lists differ in length
  where K,V are type-variables:
    K extends Object declared in interface Map
    V extends Object declared in interface Map
/tmp/TestJavaTranspiler_Rosetta_Goldenalmkvist-giullera-formula-for-pi3594009400/001/Main.java:292: error: for-each not applicable to expression type
        for (var k : exps) {
                     ^
  required: array or java.lang.Iterable
  found:    Map<String,Integer>
11 errors
